introduction to layout format

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,18 +1,18 @@
 :root {
-
-    --itemSize: 200px;
+    --itemSize: 180px;
     --colorWhite: #F7F5F1;
     --colorBlack: #181A1B;
     --borderWhite: 1px solid var(--colorWhite);
-
 }
 
 
-.centerExtended {
+html, body {
+    padding: 50px;
     min-height: 100vh;
-    padding: var(--itemSize) 0 var(--itemSize) 0;
-    background-color: var(--colorBlack) !important;
+    overscroll-behavior: none;
+    background-color: var(--colorBlack);
 }
+
 
 .gridContainer {
     padding: 1px;
@@ -24,7 +24,8 @@
     grid-template-columns: repeat(auto-fill, minmax(var(--itemSize), 1fr));
 }
 
-.gridItemVisible {
+
+.gridItem {
     padding: 2px;
     display: flex;
     font-size: 30px;
@@ -32,13 +33,10 @@
     align-items: center;
     box-sizing: border-box;
     justify-content: center;
-    background-color: var(--colorBlack);
     border: var(--borderWhite);
+    background-color: var(--colorBlack);
 }
 
-.gridItemInvisible {
-    visibility: hidden;
-}
 
 .markdownCustom {
 
@@ -51,31 +49,4 @@
 }
 .markdownCustom strong {
 
-}
-
-.imageExtended {
-
-}
-
-
-/* remove */
-.sample1 {
-    grid-row: span 2;
-    grid-column: span 3;
-}
-.sample2 {
-    grid-row: span 1;
-    grid-column: span 2;
-}
-.sample3 {
-    grid-row: span 2;
-    grid-column: span 1;
-}
-.sample4 {
-    grid-row: span 1;
-    grid-column: span 4;
-}
-.sample5 {
-    grid-row: span 3;
-    grid-column: span 1;
 }
