--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -61,6 +61,7 @@ html, body {
 }
 .markdownExtended h2 {
     font-size: 30px;
+    margin-top: -4px;
 }
 .markdownExtended h3 {
     font-size: 25px;
