--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -34,28 +34,28 @@ html, body {
 
 
 .videoExtended {
-    width: 110% !important;
+    width: 115% !important;
     height: 100% !important;
 }
 
 
 .markdownExtended {
-    font-size: 15px;
     padding: 5px;
+    font-size: 15px;
     text-align: justify;
     pointer-events: none;
+    font-family: sans-serif;
     color: var(--colorWhite);
-    font-family: Arial, Helvetica, sans-serif;
 }
 .markdownExtended h1 {
-    margin-bottom: -5px;
-    font-size: 75px;
+    font-size: 85px;
     font-family: reigo;
+    margin-bottom: -12px;
 }
 .markdownExtended h1 em {
-    font-size: 65px;
-    color: var(--colorWhite);
+    font-size: 75px;
     font-style: normal;
+    color: var(--colorWhite);
     font-family: pixeloid !important;
     background-color: transparent !important;
 }
