--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,4 +1,5 @@
 :root {
+    --itemWidth: 6;
     --itemSize: 200px;
     --colorWhite: #F7F5F1;
     --colorBlack: #181A1B;
@@ -7,7 +8,7 @@
 
 
 html, body {
-    padding: 50px;
+    padding: calc(var(--itemSize) / 3);
     min-height: 100vh;
     overscroll-behavior: none;
     background-color: var(--colorBlack);
@@ -16,10 +17,10 @@ html, body {
 
 .gridContainer {
     display: grid;
-    max-width: 70vw;
     grid-auto-flow: dense;
     box-sizing: border-box;
     grid-auto-rows: var(--itemSize);
+    max-width: calc(var(--itemSize) * var(--itemWidth));
     grid-template-columns: repeat(auto-fill, minmax(var(--itemSize), 1fr));
 }
 .gridItem {
@@ -42,20 +43,22 @@ html, body {
 .markdownExtended {
     padding: 5px;
     font-size: 15px;
+    user-select: none;
     text-align: justify;
     pointer-events: none;
     font-family: sans-serif;
     color: var(--colorWhite);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
+    -webkit-user-select: none;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 .markdownExtended h1 {
-    font-size: 85px;
+    font-size: 95px;
     vertical-align: middle;
     font-family: sans-serif;
 }
 .markdownExtended h1 em {
-    font-size: 75px;
+    font-size: 85px;
     font-style: normal;
     color: var(--colorWhite);
     font-family: pixeloid !important;
